exports[`test operation classic-ids.graphql 1`] = `
Object {
  "data": Object {
    "allEdgeCases": Object {
      "nodes": Array [
        Object {
          "rowId": 2,
        },
      ],
    },
    "allPosts": Object {
      "nodes": Array [
        Object {
          "headline": "No… It’s a thing; it’s like a plan, but with more greatness.",
          "id": "WyJwb3N0cyIsMV0=",
          "rowId": 1,
        },
      ],
    },
  },
}
`;

exports[`test operation connections.graphql 1`] = `
Object {
  "data": Object {
    "a": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
          "node": Object {
            "email": "john.smith@email.com",
            "id": 1,
            "name": "John Smith",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsyXV0=",
          "node": Object {
            "email": "sara.smith@email.com",
            "id": 2,
            "name": "Sara Smith",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
          "node": Object {
            "email": "budd.deey@email.com",
            "id": 3,
            "name": "Budd Deey",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs0XV0=",
          "node": Object {
            "email": "kathryn.ramirez@email.com",
            "id": 4,
            "name": "Kathryn Ramirez",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs1XV0=",
          "node": Object {
            "email": "joe.tucker@email.com",
            "id": 5,
            "name": "Joe Tucker",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs1XV0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
      },
      "totalCount": 5,
    },
    "b": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
          "node": Object {
            "email": "john.smith@email.com",
            "id": 1,
            "name": "John Smith",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsyXV0=",
          "node": Object {
            "email": "sara.smith@email.com",
            "id": 2,
            "name": "Sara Smith",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsyXV0=",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
      },
      "totalCount": 5,
    },
    "c": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs0XV0=",
          "node": Object {
            "email": "kathryn.ramirez@email.com",
            "id": 4,
            "name": "Kathryn Ramirez",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs1XV0=",
          "node": Object {
            "email": "joe.tucker@email.com",
            "id": 5,
            "name": "Joe Tucker",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs1XV0=",
        "hasNextPage": false,
        "hasPreviousPage": true,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs0XV0=",
      },
      "totalCount": 5,
    },
    "d": Object {
      "edges": Array [
        Object {
          "cursor": "WyJuYW1lX2FzYyIsWyJCdWRkIERlZXkiLDNdXQ==",
          "node": Object {
            "email": "budd.deey@email.com",
            "id": 3,
            "name": "Budd Deey",
          },
        },
        Object {
          "cursor": "WyJuYW1lX2FzYyIsWyJKb2UgVHVja2VyIiw1XV0=",
          "node": Object {
            "email": "joe.tucker@email.com",
            "id": 5,
            "name": "Joe Tucker",
          },
        },
        Object {
          "cursor": "WyJuYW1lX2FzYyIsWyJKb2huIFNtaXRoIiwxXV0=",
          "node": Object {
            "email": "john.smith@email.com",
            "id": 1,
            "name": "John Smith",
          },
        },
        Object {
          "cursor": "WyJuYW1lX2FzYyIsWyJLYXRocnluIFJhbWlyZXoiLDRdXQ==",
          "node": Object {
            "email": "kathryn.ramirez@email.com",
            "id": 4,
            "name": "Kathryn Ramirez",
          },
        },
        Object {
          "cursor": "WyJuYW1lX2FzYyIsWyJTYXJhIFNtaXRoIiwyXV0=",
          "node": Object {
            "email": "sara.smith@email.com",
            "id": 2,
            "name": "Sara Smith",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJuYW1lX2FzYyIsWyJTYXJhIFNtaXRoIiwyXV0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJuYW1lX2FzYyIsWyJCdWRkIERlZXkiLDNdXQ==",
      },
      "totalCount": 5,
    },
    "e": Object {
      "edges": Array [
        Object {
          "cursor": "WyJuYW1lX2Rlc2MiLFsiU2FyYSBTbWl0aCIsMl1d",
          "node": Object {
            "email": "sara.smith@email.com",
            "id": 2,
            "name": "Sara Smith",
          },
        },
        Object {
          "cursor": "WyJuYW1lX2Rlc2MiLFsiS2F0aHJ5biBSYW1pcmV6Iiw0XV0=",
          "node": Object {
            "email": "kathryn.ramirez@email.com",
            "id": 4,
            "name": "Kathryn Ramirez",
          },
        },
        Object {
          "cursor": "WyJuYW1lX2Rlc2MiLFsiSm9obiBTbWl0aCIsMV1d",
          "node": Object {
            "email": "john.smith@email.com",
            "id": 1,
            "name": "John Smith",
          },
        },
        Object {
          "cursor": "WyJuYW1lX2Rlc2MiLFsiSm9lIFR1Y2tlciIsNV1d",
          "node": Object {
            "email": "joe.tucker@email.com",
            "id": 5,
            "name": "Joe Tucker",
          },
        },
        Object {
          "cursor": "WyJuYW1lX2Rlc2MiLFsiQnVkZCBEZWV5IiwzXV0=",
          "node": Object {
            "email": "budd.deey@email.com",
            "id": 3,
            "name": "Budd Deey",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJuYW1lX2Rlc2MiLFsiQnVkZCBEZWV5IiwzXV0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJuYW1lX2Rlc2MiLFsiU2FyYSBTbWl0aCIsMl1d",
      },
      "totalCount": 5,
    },
    "f": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
          "node": Object {
            "email": "john.smith@email.com",
            "id": 1,
            "name": "John Smith",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
      },
      "totalCount": 5,
    },
    "g": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
          "node": Object {
            "email": "budd.deey@email.com",
            "id": 3,
            "name": "Budd Deey",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs0XV0=",
          "node": Object {
            "email": "kathryn.ramirez@email.com",
            "id": 4,
            "name": "Kathryn Ramirez",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs1XV0=",
          "node": Object {
            "email": "joe.tucker@email.com",
            "id": 5,
            "name": "Joe Tucker",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs1XV0=",
        "hasNextPage": false,
        "hasPreviousPage": true,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
      },
      "totalCount": 5,
    },
    "h": Object {
      "edges": Array [
        Object {
          "cursor": "WyJuYXR1cmFsIiwxXQ==",
          "node": Object {
            "constant": 2,
            "name": "John Smith",
            "x": 1,
          },
        },
        Object {
          "cursor": "WyJuYXR1cmFsIiwyXQ==",
          "node": Object {
            "constant": 2,
            "name": "Sara Smith",
            "x": 2,
          },
        },
        Object {
          "cursor": "WyJuYXR1cmFsIiwzXQ==",
          "node": Object {
            "constant": 2,
            "name": "Budd Deey",
            "x": 3,
          },
        },
        Object {
          "cursor": "WyJuYXR1cmFsIiw0XQ==",
          "node": Object {
            "constant": 2,
            "name": "Kathryn Ramirez",
            "x": 4,
          },
        },
        Object {
          "cursor": "WyJuYXR1cmFsIiw1XQ==",
          "node": Object {
            "constant": 2,
            "name": "Joe Tucker",
            "x": 5,
          },
        },
      ],
    },
    "i": Object {
      "edges": Array [
        Object {
          "cursor": "WyJjb25zdGFudF9hc2MiLFsyXV0=",
          "node": Object {
            "constant": 2,
            "name": "John Smith",
            "x": 1,
          },
        },
        Object {
          "cursor": "WyJjb25zdGFudF9hc2MiLFsyXV0=",
          "node": Object {
            "constant": 2,
            "name": "Sara Smith",
            "x": 2,
          },
        },
        Object {
          "cursor": "WyJjb25zdGFudF9hc2MiLFsyXV0=",
          "node": Object {
            "constant": 2,
            "name": "Budd Deey",
            "x": 3,
          },
        },
        Object {
          "cursor": "WyJjb25zdGFudF9hc2MiLFsyXV0=",
          "node": Object {
            "constant": 2,
            "name": "Kathryn Ramirez",
            "x": 4,
          },
        },
        Object {
          "cursor": "WyJjb25zdGFudF9hc2MiLFsyXV0=",
          "node": Object {
            "constant": 2,
            "name": "Joe Tucker",
            "x": 5,
          },
        },
      ],
    },
    "j": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
          "node": Object {
            "authorId": 2,
            "headline": "No… It’s a thing; it’s like a plan, but with more greatness.",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs4XV0=",
          "node": Object {
            "authorId": 2,
            "headline": "It’s a fez. I wear a fez now. Fezes are cool.",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxMF1d",
          "node": Object {
            "authorId": 2,
            "headline": "What’s with you kids? Every other day it’s food, food, food.",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxMF1d",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
      },
      "totalCount": 3,
    },
    "k": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
          "node": Object {
            "authorId": 2,
            "headline": "No… It’s a thing; it’s like a plan, but with more greatness.",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs4XV0=",
          "node": Object {
            "authorId": 2,
            "headline": "It’s a fez. I wear a fez now. Fezes are cool.",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs4XV0=",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
      },
      "totalCount": 3,
    },
    "l": Object {
      "edges": Array [
        Object {
          "cursor": "WyJoZWFkbGluZV9hc2MiLFsiWW91IGhpdCBtZSB3aXRoIGEgY3JpY2tldCBiYXQuIiw0XV0=",
          "node": Object {
            "authorId": 1,
            "headline": "You hit me with a cricket bat.",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJoZWFkbGluZV9hc2MiLFsiWW91IGhpdCBtZSB3aXRoIGEgY3JpY2tldCBiYXQuIiw0XV0=",
        "hasNextPage": false,
        "hasPreviousPage": true,
        "startCursor": "WyJoZWFkbGluZV9hc2MiLFsiWW91IGhpdCBtZSB3aXRoIGEgY3JpY2tldCBiYXQuIiw0XV0=",
      },
      "totalCount": 4,
    },
    "m": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsyXV0=",
          "node": Object {
            "email": "sara.smith@email.com",
            "id": 2,
            "name": "Sara Smith",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
          "node": Object {
            "email": "budd.deey@email.com",
            "id": 3,
            "name": "Budd Deey",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs0XV0=",
          "node": Object {
            "email": "kathryn.ramirez@email.com",
            "id": 4,
            "name": "Kathryn Ramirez",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs0XV0=",
        "hasNextPage": true,
        "hasPreviousPage": true,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsyXV0=",
      },
      "totalCount": 5,
    },
    "n": Object {
      "edges": Array [],
      "pageInfo": Object {
        "endCursor": null,
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": null,
      },
      "totalCount": 5,
    },
    "o": Object {
      "nodes": Array [
        Object {
          "rowId": 2,
        },
      ],
    },
  },
}
`;

exports[`test operation dynamic-json.graphql 1`] = `
Object {
  "data": Object {
    "a": true,
    "allTypes": Object {
      "nodes": Array [
        Object {
          "json": Object {
            "a": 1,
            "b": 2,
            "c": 3,
            "d": Object {
              "e": 4,
              "f": 5,
              "g": Array [
                6,
                7,
                8,
                "x",
                false,
                null,
              ],
            },
          },
          "jsonb": Object {
            "1": "a",
            "2": "b",
            "3": "c",
            "4": Object {
              "5": "d",
              "6": "e",
              "7": Array [
                "f",
                "g",
                "h",
                42,
                true,
                null,
              ],
            },
          },
        },
      ],
    },
    "b": false,
    "c": 42,
    "d": 3.1415,
    "e": "hello, world!",
    "f": Object {
      "a": 1,
      "b": 2,
      "c": 3,
    },
    "g": Array [
      1,
      2,
      3,
      4,
    ],
    "h": Object {
      "array": Array [
        1,
        2,
        3,
        4,
      ],
      "boolean": true,
      "float": 3.1415,
      "integer": 42,
      "object": Object {
        "a": 1,
        "b": 2,
        "c": 3,
      },
    },
    "i": Array [
      true,
      42,
      3.1415,
      Object {
        "a": 1,
        "b": 2,
        "c": 3,
      },
      Array [
        1,
        2,
        3,
        4,
      ],
    ],
    "j": Array [
      true,
      null,
      42,
      3.1415,
      Object {
        "a": 1,
        "b": null,
        "c": 3,
      },
      Array [
        1,
        2,
        null,
        3,
        4,
      ],
    ],
  },
}
`;

exports[`test operation dynamic-json.graphql 2`] = `
Object {
  "data": Object {
    "a": true,
    "allTypes": Object {
      "nodes": Array [
        Object {
          "json": Object {
            "a": 1,
            "b": 2,
            "c": 3,
            "d": Object {
              "e": 4,
              "f": 5,
              "g": Array [
                6,
                7,
                8,
                "x",
                false,
                null,
              ],
            },
          },
          "jsonb": Object {
            "1": "a",
            "2": "b",
            "3": "c",
            "4": Object {
              "5": "d",
              "6": "e",
              "7": Array [
                "f",
                "g",
                "h",
                42,
                true,
                null,
              ],
            },
          },
        },
      ],
    },
    "b": false,
    "c": 42,
    "d": 3.1415,
    "e": "hello, world!",
    "f": Object {
      "a": 1,
      "b": 2,
      "c": 3,
    },
    "g": Array [
      1,
      2,
      3,
      4,
    ],
    "h": Object {
      "array": Array [
        1,
        2,
        3,
        4,
      ],
      "boolean": true,
      "float": 3.1415,
      "integer": 42,
      "object": Object {
        "a": 1,
        "b": 2,
        "c": 3,
      },
    },
    "i": Array [
      true,
      42,
      3.1415,
      Object {
        "a": 1,
        "b": 2,
        "c": 3,
      },
      Array [
        1,
        2,
        3,
        4,
      ],
    ],
    "j": Array [
      true,
      null,
      42,
      3.1415,
      Object {
        "a": 1,
        "b": null,
        "c": 3,
      },
      Array [
        1,
        2,
        null,
        3,
        4,
      ],
    ],
  },
}
`;

exports[`test operation mutation-create.graphql 1`] = `
Object {
  "data": Object {
    "a": Object {
      "clientMutationId": null,
      "query": Object {
        "nodeId": "query",
      },
      "type": Object {
        "anIntRange": Object {
          "end": Object {
            "inclusive": false,
            "value": 500,
          },
          "start": null,
        },
        "bigint": "467131188225",
        "boolean": false,
        "compoundType": Object {
          "a": 123,
          "b": "abc",
          "c": "GREEN",
          "d": "ec4a9fae-4ec5-4763-98eb-0327fb2dc9bf",
          "fooBar": 20,
        },
        "date": "2016-10-15",
        "daterange": Object {
          "end": Object {
            "inclusive": false,
            "value": "1927-11-07",
          },
          "start": Object {
            "inclusive": true,
            "value": "1927-11-06",
          },
        },
        "decimal": 15.2,
        "domain": 6,
        "domain2": 5,
        "enum": "RED",
        "id": 201,
        "interval": Object {
          "days": 4,
          "hours": 3,
          "minutes": 2,
          "months": 5,
          "seconds": 1,
          "years": 6,
        },
        "json": "{\"x\":1,\"y\":2,\"z\":3}",
        "jsonb": "{\"a\":1,\"b\":2,\"c\":3}",
        "money": 5000,
        "nestedCompoundType": Object {
          "a": Object {
            "a": 456,
            "b": "def",
            "c": "BLUE",
            "d": "79863dcf-0433-4c3d-bc51-978326d4546f",
            "fooBar": 42,
          },
          "b": Object {
            "a": 789,
            "b": "ghi",
            "c": "RED",
            "d": "b687ee42-c515-4544-b742-525e39517e7d",
            "fooBar": -8,
          },
          "bazBuz": 0,
        },
        "nodeId": "WyJ0eXBlcyIsMjAxXQ==",
        "numeric": 15.2,
        "numrange": Object {
          "end": null,
          "start": Object {
            "inclusive": true,
            "value": 50,
          },
        },
        "smallint": 30,
        "textArray": Array [
          "have",
          "you",
          "ever",
          "been",
          "down",
          "the",
          "water",
          "spout",
          "?",
        ],
        "time": "19:13:18.625699",
        "timestamp": "2016-10-07T16:12:21.747269",
        "timestamptz": "2016-10-09T16:12:45.218676-04:00",
        "timetz": "13:13:29.585176-04",
        "varchar": "abc",
      },
    },
    "b": Object {
      "a": Object {
        "cursor": null,
        "node": Object {
          "name": "John Smith Jr.",
          "nodeId": "WyJwZW9wbGUiLDkwMDBd",
        },
      },
      "b": Object {
        "cursor": null,
        "node": Object {
          "name": "John Smith Jr.",
          "nodeId": "WyJwZW9wbGUiLDkwMDBd",
        },
      },
      "c": Object {
        "cursor": null,
        "node": Object {
          "name": "John Smith Jr.",
          "nodeId": "WyJwZW9wbGUiLDkwMDBd",
        },
      },
      "clientMutationId": null,
      "d": Object {
        "cursor": null,
        "node": Object {
          "name": "John Smith Jr.",
          "nodeId": "WyJwZW9wbGUiLDkwMDBd",
        },
      },
      "e": Object {
        "cursor": null,
        "node": Object {
          "name": "John Smith Jr.",
          "nodeId": "WyJwZW9wbGUiLDkwMDBd",
        },
      },
      "f": Object {
        "cursor": null,
        "node": Object {
          "name": "John Smith Jr.",
          "nodeId": "WyJwZW9wbGUiLDkwMDBd",
        },
      },
      "g": Object {
        "cursor": null,
        "node": Object {
          "name": "John Smith Jr.",
          "nodeId": "WyJwZW9wbGUiLDkwMDBd",
        },
      },
      "person": Object {
        "about": "Son of Sara and John Smith.",
        "email": "johnny.boy.smith@email.com",
        "id": 9000,
        "name": "John Smith Jr.",
        "nodeId": "WyJwZW9wbGUiLDkwMDBd",
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "c": Object {
      "a": Object {
        "cursor": null,
        "node": Object {
          "name": "Best Pal",
          "nodeId": "WyJwZW9wbGUiLDIwXQ==",
        },
      },
      "b": Object {
        "cursor": null,
        "node": Object {
          "name": "Best Pal",
          "nodeId": "WyJwZW9wbGUiLDIwXQ==",
        },
      },
      "c": Object {
        "cursor": null,
        "node": Object {
          "name": "Best Pal",
          "nodeId": "WyJwZW9wbGUiLDIwXQ==",
        },
      },
      "clientMutationId": "hello",
      "d": Object {
        "cursor": null,
        "node": Object {
          "name": "Best Pal",
          "nodeId": "WyJwZW9wbGUiLDIwXQ==",
        },
      },
      "e": Object {
        "cursor": null,
        "node": Object {
          "name": "Best Pal",
          "nodeId": "WyJwZW9wbGUiLDIwXQ==",
        },
      },
      "f": Object {
        "cursor": null,
        "node": Object {
          "name": "Best Pal",
          "nodeId": "WyJwZW9wbGUiLDIwXQ==",
        },
      },
      "g": Object {
        "cursor": null,
        "node": Object {
          "name": "Best Pal",
          "nodeId": "WyJwZW9wbGUiLDIwXQ==",
        },
      },
      "person": Object {
        "about": "My archnemisis is Budd Deey.",
        "email": "best.pal@email.com",
        "id": 20,
        "name": "Best Pal",
        "nodeId": "WyJwZW9wbGUiLDIwXQ==",
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "d": Object {
      "clientMutationId": "world",
      "compoundKey": Object {
        "extra": false,
        "nodeId": "WyJjb21wb3VuZF9rZXlzIiw5MDAwLDIwXQ==",
        "personByPersonId1": Object {
          "name": "John Smith Jr.",
          "nodeId": "WyJwZW9wbGUiLDkwMDBd",
        },
        "personByPersonId2": Object {
          "name": "Best Pal",
          "nodeId": "WyJwZW9wbGUiLDIwXQ==",
        },
        "personId1": 9000,
        "personId2": 20,
      },
      "personByPersonId1": Object {
        "name": "John Smith Jr.",
        "nodeId": "WyJwZW9wbGUiLDkwMDBd",
      },
      "personByPersonId2": Object {
        "name": "Best Pal",
        "nodeId": "WyJwZW9wbGUiLDIwXQ==",
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "e": Object {
      "edgeCase": Object {
        "notNullHasDefault": true,
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "f": Object {
      "edgeCase": Object {
        "notNullHasDefault": false,
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "g": Object {
      "a": Object {
        "cursor": null,
        "node": Object {
          "name": "Budd Deey",
          "nodeId": "WyJwZW9wbGUiLDE5OThd",
        },
      },
      "b": Object {
        "cursor": null,
        "node": Object {
          "name": "Budd Deey",
          "nodeId": "WyJwZW9wbGUiLDE5OThd",
        },
      },
      "c": Object {
        "cursor": null,
        "node": Object {
          "name": "Budd Deey",
          "nodeId": "WyJwZW9wbGUiLDE5OThd",
        },
      },
      "clientMutationId": null,
      "d": Object {
        "cursor": null,
        "node": Object {
          "name": "Budd Deey",
          "nodeId": "WyJwZW9wbGUiLDE5OThd",
        },
      },
      "e": Object {
        "cursor": null,
        "node": Object {
          "name": "Budd Deey",
          "nodeId": "WyJwZW9wbGUiLDE5OThd",
        },
      },
      "f": Object {
        "cursor": null,
        "node": Object {
          "name": "Budd Deey",
          "nodeId": "WyJwZW9wbGUiLDE5OThd",
        },
      },
      "g": Object {
        "cursor": null,
        "node": Object {
          "name": "Budd Deey",
          "nodeId": "WyJwZW9wbGUiLDE5OThd",
        },
      },
      "person": Object {
        "about": null,
        "email": "budd.deey.the.second@email.com",
        "id": 1998,
        "name": "Budd Deey",
        "nodeId": "WyJwZW9wbGUiLDE5OThd",
      },
      "query": Object {
        "nodeId": "query",
      },
    },
  },
}
`;

exports[`test operation mutation-delete.graphql 1`] = `
Object {
  "data": Object {
    "a": Object {
      "clientMutationId": null,
      "deletedPostId": "WyJwb3N0cyIsMV0=",
      "post": Object {
        "authorId": 2,
        "headline": "No… It’s a thing; it’s like a plan, but with more greatness.",
        "id": 1,
        "nodeId": "WyJwb3N0cyIsMV0=",
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "b": Object {
      "clientMutationId": "hello",
      "deletedPostId": "WyJwb3N0cyIsMl0=",
      "post": Object {
        "authorId": 1,
        "headline": "I hate yogurt. It’s just stuff with bits in.",
        "id": 2,
        "nodeId": "WyJwb3N0cyIsMl0=",
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "c": null,
    "d": Object {
      "clientMutationId": "world",
      "deletedPostId": "WyJwb3N0cyIsM10=",
      "post": Object {
        "authorId": 1,
        "headline": "Is that a cooking show?",
        "id": 3,
        "nodeId": "WyJwb3N0cyIsM10=",
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "e": Object {
      "clientMutationId": null,
      "deletedPostId": "WyJwb3N0cyIsNl0=",
      "post": Object {
        "authorId": 3,
        "headline": "Stop talking, brain thinking. Hush.",
        "id": 6,
        "nodeId": "WyJwb3N0cyIsNl0=",
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "f": Object {
      "clientMutationId": "hello",
      "deletedPostId": "WyJwb3N0cyIsOV0=",
      "post": Object {
        "authorId": 3,
        "headline": "You know how I sometimes have really brilliant ideas?",
        "id": 9,
        "nodeId": "WyJwb3N0cyIsOV0=",
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "g": null,
    "h": Object {
      "clientMutationId": "world",
      "deletedPostId": "WyJwb3N0cyIsMTFd",
      "post": Object {
        "authorId": 3,
        "headline": "They’re not aliens, they’re Earth…liens!",
        "id": 11,
        "nodeId": "WyJwb3N0cyIsMTFd",
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "i": Object {
      "clientMutationId": null,
      "compoundKey": Object {
        "nodeId": "WyJjb21wb3VuZF9rZXlzIiw0LDNd",
        "personByPersonId1": Object {
          "name": "Kathryn Ramirez",
          "nodeId": "WyJwZW9wbGUiLDRd",
        },
        "personByPersonId2": Object {
          "name": "Budd Deey",
          "nodeId": "WyJwZW9wbGUiLDNd",
        },
        "personId1": 4,
        "personId2": 3,
      },
      "deletedCompoundKeyId": "WyJjb21wb3VuZF9rZXlzIiw0LDNd",
      "query": Object {
        "nodeId": "query",
      },
    },
    "j": Object {
      "clientMutationId": null,
      "compoundKey": Object {
        "nodeId": "WyJjb21wb3VuZF9rZXlzIiwyLDNd",
        "personByPersonId1": Object {
          "name": "Sara Smith",
          "nodeId": "WyJwZW9wbGUiLDJd",
        },
        "personByPersonId2": Object {
          "name": "Budd Deey",
          "nodeId": "WyJwZW9wbGUiLDNd",
        },
        "personId1": 2,
        "personId2": 3,
      },
      "deletedCompoundKeyId": "WyJjb21wb3VuZF9rZXlzIiwyLDNd",
      "query": Object {
        "nodeId": "query",
      },
    },
    "k": Object {
      "clientMutationId": null,
      "deletedPersonId": "WyJwZW9wbGUiLDNd",
      "person": Object {
        "email": "budd.deey@email.com",
        "id": 3,
        "name": "Budd Deey",
        "nodeId": "WyJwZW9wbGUiLDNd",
      },
      "query": Object {
        "nodeId": "query",
      },
    },
  },
  "errors": Array [
    [GraphQLError: No values were deleted in collection 'posts' because no values were found.],
    [GraphQLError: No values were deleted in collection 'posts' because no values were found.],
  ],
}
`;

exports[`test operation mutation-update.graphql 1`] = `
Object {
  "data": Object {
    "a": Object {
      "clientMutationId": null,
      "person": Object {
        "about": "An older John Smith",
        "email": "john.smith@email.com",
        "id": 1,
        "name": "John Smith Sr.",
        "nodeId": "WyJwZW9wbGUiLDFd",
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "b": Object {
      "clientMutationId": "hello",
      "person": Object {
        "about": null,
        "email": "sarah.smith@email.com",
        "id": 2,
        "name": "Sarah Smith",
        "nodeId": "WyJwZW9wbGUiLDJd",
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "c": Object {
      "clientMutationId": "world",
      "person": Object {
        "about": "Now with an “H.”",
        "email": "sarah.smith@email.com",
        "id": 2,
        "name": "Sarah Smith",
        "nodeId": "WyJwZW9wbGUiLDJd",
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "d": Object {
      "clientMutationId": null,
      "person": Object {
        "about": "I have taken over Budd’s account. Hehehe.",
        "email": "budd.deey@email.com",
        "id": 3,
        "name": "Best Pal",
        "nodeId": "WyJwZW9wbGUiLDNd",
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "e": Object {
      "clientMutationId": null,
      "person": Object {
        "about": "Make art not friends.",
        "email": "kathryn.ramirez@email.com",
        "id": 4,
        "name": "Kathryn Ramirez",
        "nodeId": "WyJwZW9wbGUiLDRd",
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "f": Object {
      "clientMutationId": null,
      "compoundKey": Object {
        "extra": true,
        "nodeId": "WyJjb21wb3VuZF9rZXlzIiwyLDJd",
        "personByPersonId1": Object {
          "id": 2,
          "name": "Sarah Smith",
        },
        "personByPersonId2": Object {
          "id": 2,
          "name": "Sarah Smith",
        },
        "personId1": 2,
        "personId2": 2,
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "g": Object {
      "clientMutationId": "hello",
      "compoundKey": Object {
        "extra": false,
        "nodeId": "WyJjb21wb3VuZF9rZXlzIiwzLDJd",
        "personByPersonId1": Object {
          "id": 3,
          "name": "Best Pal",
        },
        "personByPersonId2": Object {
          "id": 2,
          "name": "Sarah Smith",
        },
        "personId1": 3,
        "personId2": 2,
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "h": Object {
      "clientMutationId": "world",
      "compoundKey": Object {
        "extra": false,
        "nodeId": "WyJjb21wb3VuZF9rZXlzIiw0LDNd",
        "personByPersonId1": Object {
          "id": 4,
          "name": "Kathryn Ramirez",
        },
        "personByPersonId2": Object {
          "id": 3,
          "name": "Best Pal",
        },
        "personId1": 4,
        "personId2": 3,
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "i": Object {
      "clientMutationId": null,
      "person": Object {
        "about": null,
        "email": "sarah.smith@email.com",
        "id": 2,
        "name": "Sarah Smith",
        "nodeId": "WyJwZW9wbGUiLDJd",
      },
      "query": Object {
        "nodeId": "query",
      },
    },
  },
}
`;

exports[`test operation node.graphql 1`] = `
Object {
  "data": Object {
    "a": Object {
      "nodes": Array [
        Object {
          "__typename": "Person",
          "id": 1,
          "name": "John Smith",
          "nodeId": "WyJwZW9wbGUiLDFd",
        },
        Object {
          "__typename": "Person",
          "id": 2,
          "name": "Sara Smith",
          "nodeId": "WyJwZW9wbGUiLDJd",
        },
        Object {
          "__typename": "Person",
          "id": 3,
          "name": "Budd Deey",
          "nodeId": "WyJwZW9wbGUiLDNd",
        },
        Object {
          "__typename": "Person",
          "id": 4,
          "name": "Kathryn Ramirez",
          "nodeId": "WyJwZW9wbGUiLDRd",
        },
        Object {
          "__typename": "Person",
          "id": 5,
          "name": "Joe Tucker",
          "nodeId": "WyJwZW9wbGUiLDVd",
        },
      ],
    },
    "b": Object {
      "nodes": Array [
        Object {
          "__typename": "CompoundKey",
          "nodeId": "WyJjb21wb3VuZF9rZXlzIiwxLDJd",
          "personId1": 1,
          "personId2": 2,
        },
        Object {
          "__typename": "CompoundKey",
          "nodeId": "WyJjb21wb3VuZF9rZXlzIiwyLDFd",
          "personId1": 2,
          "personId2": 1,
        },
        Object {
          "__typename": "CompoundKey",
          "nodeId": "WyJjb21wb3VuZF9rZXlzIiwyLDNd",
          "personId1": 2,
          "personId2": 3,
        },
        Object {
          "__typename": "CompoundKey",
          "nodeId": "WyJjb21wb3VuZF9rZXlzIiwyLDVd",
          "personId1": 2,
          "personId2": 5,
        },
        Object {
          "__typename": "CompoundKey",
          "nodeId": "WyJjb21wb3VuZF9rZXlzIiw0LDNd",
          "personId1": 4,
          "personId2": 3,
        },
        Object {
          "__typename": "CompoundKey",
          "nodeId": "WyJjb21wb3VuZF9rZXlzIiw0LDRd",
          "personId1": 4,
          "personId2": 4,
        },
      ],
    },
    "c": Object {
      "__typename": "CompoundKey",
      "nodeId": "WyJjb21wb3VuZF9rZXlzIiwyLDNd",
      "personId1": 2,
      "personId2": 3,
    },
    "d": Object {
      "__typename": "Person",
      "id": 2,
      "name": "Sara Smith",
      "nodeId": "WyJwZW9wbGUiLDJd",
    },
    "e": Object {
      "__typename": "CompoundKey",
      "nodeId": "WyJjb21wb3VuZF9rZXlzIiwxLDJd",
      "personId1": 1,
      "personId2": 2,
    },
    "f": Object {
      "__typename": "Person",
      "id": 5,
      "name": "Joe Tucker",
      "nodeId": "WyJwZW9wbGUiLDVd",
    },
    "g": null,
    "h": null,
    "i": Object {
      "__typename": "Person",
      "id": 2,
      "name": "Sara Smith",
      "nodeId": "WyJwZW9wbGUiLDJd",
    },
    "j": Object {
      "__typename": "Person",
      "id": 5,
      "name": "Joe Tucker",
      "nodeId": "WyJwZW9wbGUiLDVd",
    },
    "k": null,
    "l": Object {
      "__typename": "CompoundKey",
      "nodeId": "WyJjb21wb3VuZF9rZXlzIiwyLDNd",
      "personId1": 2,
      "personId2": 3,
    },
    "m": Object {
      "__typename": "CompoundKey",
      "nodeId": "WyJjb21wb3VuZF9rZXlzIiwxLDJd",
      "personId1": 1,
      "personId2": 2,
    },
    "n": null,
    "o": Object {
      "__typename": "SimilarTable1",
      "col1": null,
      "col2": null,
      "col3": -3,
      "id": 2,
      "nodeId": "WyJzaW1pbGFyX3RhYmxlXzFTIiwyXQ==",
    },
    "p": Object {
      "__typename": "SimilarTable2",
      "col3": -3,
      "col4": null,
      "col5": null,
      "id": 2,
      "nodeId": "WyJzaW1pbGFyX3RhYmxlXzJTIiwyXQ==",
    },
    "q": Object {
      "__typename": "SimilarTable1",
      "col1": null,
      "col2": null,
      "col3": -3,
      "id": 2,
      "nodeId": "WyJzaW1pbGFyX3RhYmxlXzFTIiwyXQ==",
    },
    "r": Object {
      "__typename": "SimilarTable2",
      "col3": -3,
      "col4": null,
      "col5": null,
      "id": 2,
      "nodeId": "WyJzaW1pbGFyX3RhYmxlXzJTIiwyXQ==",
    },
  },
}
`;

exports[`test operation procedure-computed-fields.graphql 1`] = `
Object {
  "data": Object {
    "allEdgeCases": Object {
      "nodes": Array [
        Object {
          "computed": "hello world",
          "notNullHasDefault": false,
          "wontCastEasy": 20,
        },
        Object {
          "computed": "hello world",
          "notNullHasDefault": true,
          "wontCastEasy": null,
        },
        Object {
          "computed": "hello world",
          "notNullHasDefault": false,
          "wontCastEasy": -512,
        },
      ],
    },
    "allPeople": Object {
      "nodes": Array [
        Object {
          "firstName": "John",
          "friends": Object {
            "nodes": Array [
              Object {
                "firstName": "Sara",
                "friends": Object {
                  "nodes": Array [
                    Object {
                      "firstName": "Budd",
                      "name": "Budd Deey",
                    },
                  ],
                },
                "name": "Sara Smith",
              },
              Object {
                "firstName": "Budd",
                "friends": Object {
                  "nodes": Array [
                    Object {
                      "firstName": "Kathryn",
                      "name": "Kathryn Ramirez",
                    },
                  ],
                },
                "name": "Budd Deey",
              },
            ],
          },
          "name": "John Smith",
        },
        Object {
          "firstName": "Sara",
          "friends": Object {
            "nodes": Array [
              Object {
                "firstName": "Budd",
                "friends": Object {
                  "nodes": Array [
                    Object {
                      "firstName": "Kathryn",
                      "name": "Kathryn Ramirez",
                    },
                  ],
                },
                "name": "Budd Deey",
              },
              Object {
                "firstName": "Kathryn",
                "friends": Object {
                  "nodes": Array [
                    Object {
                      "firstName": "Joe",
                      "name": "Joe Tucker",
                    },
                  ],
                },
                "name": "Kathryn Ramirez",
              },
            ],
          },
          "name": "Sara Smith",
        },
        Object {
          "firstName": "Budd",
          "friends": Object {
            "nodes": Array [
              Object {
                "firstName": "Kathryn",
                "friends": Object {
                  "nodes": Array [
                    Object {
                      "firstName": "Joe",
                      "name": "Joe Tucker",
                    },
                  ],
                },
                "name": "Kathryn Ramirez",
              },
              Object {
                "firstName": "Joe",
                "friends": Object {
                  "nodes": Array [],
                },
                "name": "Joe Tucker",
              },
            ],
          },
          "name": "Budd Deey",
        },
        Object {
          "firstName": "Kathryn",
          "friends": Object {
            "nodes": Array [
              Object {
                "firstName": "Joe",
                "friends": Object {
                  "nodes": Array [],
                },
                "name": "Joe Tucker",
              },
            ],
          },
          "name": "Kathryn Ramirez",
        },
        Object {
          "firstName": "Joe",
          "friends": Object {
            "nodes": Array [],
          },
          "name": "Joe Tucker",
        },
      ],
    },
    "allPosts": Object {
      "nodes": Array [
        Object {
          "a": "No… It’s …",
          "b": "No… It’s a thi…",
          "c": "No… It’s a thing; i[...]",
          "headline": "No… It’s a thing; it’s like a plan, but with more greatness.",
        },
        Object {
          "a": "I hate yo…",
          "b": "I hate yogurt.…",
          "c": "I hate yogurt. It’s[...]",
          "headline": "I hate yogurt. It’s just stuff with bits in.",
        },
        Object {
          "a": "Is that a…",
          "b": "Is that a cook…",
          "c": "Is that a cooking s[...]",
          "headline": "Is that a cooking show?",
        },
        Object {
          "a": "You hit m…",
          "b": "You hit me wit…",
          "c": "You hit me with a c[...]",
          "headline": "You hit me with a cricket bat.",
        },
        Object {
          "a": "Please, D…",
          "b": "Please, Don-Bo…",
          "c": "Please, Don-Bot… lo[...]",
          "headline": "Please, Don-Bot… look into your hard drive, and open your mercy file!",
        },
        Object {
          "a": "Stop talk…",
          "b": "Stop talking, …",
          "c": "Stop talking, brain[...]",
          "headline": "Stop talking, brain thinking. Hush.",
        },
        Object {
          "a": "Large bet…",
          "b": "Large bet on m…",
          "c": "Large bet on myself[...]",
          "headline": "Large bet on myself in round one.",
        },
        Object {
          "a": "It’s a fe…",
          "b": "It’s a fez. I …",
          "c": "It’s a fez. I wear [...]",
          "headline": "It’s a fez. I wear a fez now. Fezes are cool.",
        },
        Object {
          "a": "You know …",
          "b": "You know how I…",
          "c": "You know how I some[...]",
          "headline": "You know how I sometimes have really brilliant ideas?",
        },
        Object {
          "a": "What’s wi…",
          "b": "What’s with yo…",
          "c": "What’s with you kid[...]",
          "headline": "What’s with you kids? Every other day it’s food, food, food.",
        },
        Object {
          "a": "They’re n…",
          "b": "They’re not al…",
          "c": "They’re not aliens,[...]",
          "headline": "They’re not aliens, they’re Earth…liens!",
        },
      ],
    },
    "allTypes": Object {
      "nodes": Array [
        Object {
          "compoundType": Object {
            "a": 1,
            "computedField": 9,
            "fooBar": 8,
          },
          "nestedCompoundType": Object {
            "a": Object {
              "a": 3,
              "computedField": 96,
              "fooBar": 93,
            },
            "b": Object {
              "a": 42,
              "computedField": 37,
              "fooBar": -5,
            },
          },
        },
      ],
    },
  },
}
`;

exports[`test operation procedure-mutation.graphql 1`] = `
Object {
  "data": Object {
    "add1Mutation": Object {
      "clientMutationId": null,
      "integer": 3,
    },
    "add2Mutation": Object {
      "clientMutationId": "hello",
      "integer": 4,
    },
    "add3Mutation": Object {
      "clientMutationId": "world",
      "integer": null,
    },
    "add4Mutation": Object {
      "integer": 4,
    },
    "compoundTypeMutation": Object {
      "compoundType": Object {
        "a": 420,
        "b": "easy cheesy baked potatoes",
        "c": "RED",
        "d": null,
        "fooBar": 8,
      },
    },
    "intSetMutation": Object {
      "integers": Array [
        1,
        2,
        3,
        4,
        5,
        null,
        6,
      ],
    },
    "jsonIdentityMutation": Object {
      "json": "{\"a\":1,\"b\":2,\"c\":3}",
    },
    "mult1": Object {
      "integer": 0,
    },
    "mult2": Object {
      "integer": 1,
    },
    "mult3": Object {
      "integer": 2,
    },
    "mult4": Object {
      "integer": 10,
    },
    "noArgsMutation": Object {
      "clientMutationId": "x",
      "integer": 2,
    },
    "tableMutation": Object {
      "personByAuthorId": Object {
        "id": 5,
        "name": "Joe Tucker",
      },
      "post": Object {
        "authorId": 5,
        "headline": "Please, Don-Bot… look into your hard drive, and open your mercy file!",
        "id": 5,
        "nodeId": "WyJwb3N0cyIsNV0=",
      },
      "postEdge": Object {
        "cursor": null,
        "node": Object {
          "headline": "Please, Don-Bot… look into your hard drive, and open your mercy file!",
          "id": 5,
        },
      },
    },
    "tableSetMutation": Object {
      "people": Array [
        Object {
          "name": "John Smith",
        },
        Object {
          "name": "Sara Smith",
        },
        Object {
          "name": "Budd Deey",
        },
        Object {
          "name": "Kathryn Ramirez",
        },
        Object {
          "name": "Joe Tucker",
        },
      ],
    },
    "typesMutation": Object {
      "boolean": false,
    },
  },
}
`;

exports[`test operation procedure-query.graphql 1`] = `
Object {
  "data": Object {
    "add1Query": 3,
    "add2Query": 4,
    "add3Query": null,
    "add4Query": 4,
    "compoundTypeQuery": Object {
      "a": 420,
      "b": "easy cheesy baked potatoes",
      "c": "RED",
      "d": null,
      "fooBar": 8,
    },
    "intSetQuery": Object {
      "edges": Array [
        Object {
          "cursor": "WyJuYXR1cmFsIiwxXQ==",
          "node": 1,
        },
        Object {
          "cursor": "WyJuYXR1cmFsIiwyXQ==",
          "node": 2,
        },
        Object {
          "cursor": "WyJuYXR1cmFsIiwzXQ==",
          "node": 3,
        },
        Object {
          "cursor": "WyJuYXR1cmFsIiw0XQ==",
          "node": 4,
        },
        Object {
          "cursor": "WyJuYXR1cmFsIiw1XQ==",
          "node": 5,
        },
        Object {
          "cursor": "WyJuYXR1cmFsIiw2XQ==",
          "node": null,
        },
        Object {
          "cursor": "WyJuYXR1cmFsIiw3XQ==",
          "node": 6,
        },
      ],
    },
    "noArgsQuery": 2,
    "tableQuery": Object {
      "authorId": 5,
      "headline": "Please, Don-Bot… look into your hard drive, and open your mercy file!",
      "id": 5,
      "nodeId": "WyJwb3N0cyIsNV0=",
    },
    "tableSetQuery": Object {
      "edges": Array [
        Object {
          "cursor": "WyJuYXR1cmFsIiwxXQ==",
          "node": Object {
            "name": "John Smith",
          },
        },
        Object {
          "cursor": "WyJuYXR1cmFsIiwyXQ==",
          "node": Object {
            "name": "Sara Smith",
          },
        },
        Object {
          "cursor": "WyJuYXR1cmFsIiwzXQ==",
          "node": Object {
            "name": "Budd Deey",
          },
        },
        Object {
          "cursor": "WyJuYXR1cmFsIiw0XQ==",
          "node": Object {
            "name": "Kathryn Ramirez",
          },
        },
        Object {
          "cursor": "WyJuYXR1cmFsIiw1XQ==",
          "node": Object {
            "name": "Joe Tucker",
          },
        },
      ],
    },
    "typesQuery": false,
  },
}
`;

exports[`test operation query.graphql 1`] = `
Object {
  "data": Object {
    "a": null,
    "b": Object {
      "__typename": "Query",
      "a": null,
      "b": Object {
        "__typename": "Query",
        "nodeId": "query",
      },
      "nodeId": "query",
    },
    "nodeId": "query",
    "query": Object {
      "a": null,
      "b": Object {
        "__typename": "Query",
        "nodeId": "query",
      },
      "nodeId": "query",
      "query": Object {
        "a": null,
        "b": Object {
          "__typename": "Query",
          "nodeId": "query",
        },
        "nodeId": "query",
        "query": Object {
          "a": null,
          "b": Object {
            "__typename": "Query",
            "nodeId": "query",
          },
          "nodeId": "query",
        },
      },
    },
  },
}
`;

exports[`test operation relation-head-tail.graphql 1`] = `
Object {
  "data": Object {
    "allCompoundKeys": Object {
      "nodes": Array [
        Object {
          "foreignKeysByCompoundKey1AndCompoundKey2": Object {
            "nodes": Array [],
          },
          "personId1": 1,
          "personId2": 2,
        },
        Object {
          "foreignKeysByCompoundKey1AndCompoundKey2": Object {
            "nodes": Array [
              Object {
                "compoundKey1": 2,
                "compoundKey2": 1,
                "personId": 5,
              },
              Object {
                "compoundKey1": 2,
                "compoundKey2": 1,
                "personId": null,
              },
            ],
          },
          "personId1": 2,
          "personId2": 1,
        },
        Object {
          "foreignKeysByCompoundKey1AndCompoundKey2": Object {
            "nodes": Array [],
          },
          "personId1": 2,
          "personId2": 3,
        },
        Object {
          "foreignKeysByCompoundKey1AndCompoundKey2": Object {
            "nodes": Array [],
          },
          "personId1": 2,
          "personId2": 5,
        },
        Object {
          "foreignKeysByCompoundKey1AndCompoundKey2": Object {
            "nodes": Array [],
          },
          "personId1": 4,
          "personId2": 3,
        },
        Object {
          "foreignKeysByCompoundKey1AndCompoundKey2": Object {
            "nodes": Array [
              Object {
                "compoundKey1": 4,
                "compoundKey2": 4,
                "personId": null,
              },
            ],
          },
          "personId1": 4,
          "personId2": 4,
        },
      ],
    },
    "allPeople": Object {
      "nodes": Array [
        Object {
          "compoundKeysByPersonId1": Object {
            "nodes": Array [
              Object {
                "personId1": 1,
                "personId2": 2,
              },
            ],
          },
          "compoundKeysByPersonId2": Object {
            "nodes": Array [
              Object {
                "personId1": 2,
                "personId2": 1,
              },
            ],
          },
          "id": 1,
          "name": "John Smith",
          "postsByAuthorId": Object {
            "nodes": Array [
              Object {
                "authorId": 1,
                "headline": "You hit me with a cricket bat.",
              },
              Object {
                "authorId": 1,
                "headline": "Large bet on myself in round one.",
              },
            ],
          },
          "roundOnePost": Object {
            "nodes": Array [
              Object {
                "authorId": 1,
                "headline": "Large bet on myself in round one.",
              },
            ],
          },
        },
        Object {
          "compoundKeysByPersonId1": Object {
            "nodes": Array [
              Object {
                "personId1": 2,
                "personId2": 1,
              },
              Object {
                "personId1": 2,
                "personId2": 3,
              },
              Object {
                "personId1": 2,
                "personId2": 5,
              },
            ],
          },
          "compoundKeysByPersonId2": Object {
            "nodes": Array [
              Object {
                "personId1": 1,
                "personId2": 2,
              },
            ],
          },
          "id": 2,
          "name": "Sara Smith",
          "postsByAuthorId": Object {
            "nodes": Array [
              Object {
                "authorId": 2,
                "headline": "It’s a fez. I wear a fez now. Fezes are cool.",
              },
              Object {
                "authorId": 2,
                "headline": "What’s with you kids? Every other day it’s food, food, food.",
              },
            ],
          },
          "roundOnePost": Object {
            "nodes": Array [],
          },
        },
        Object {
          "compoundKeysByPersonId1": Object {
            "nodes": Array [],
          },
          "compoundKeysByPersonId2": Object {
            "nodes": Array [
              Object {
                "personId1": 2,
                "personId2": 3,
              },
              Object {
                "personId1": 4,
                "personId2": 3,
              },
            ],
          },
          "id": 3,
          "name": "Budd Deey",
          "postsByAuthorId": Object {
            "nodes": Array [
              Object {
                "authorId": 3,
                "headline": "You know how I sometimes have really brilliant ideas?",
              },
              Object {
                "authorId": 3,
                "headline": "They’re not aliens, they’re Earth…liens!",
              },
            ],
          },
          "roundOnePost": Object {
            "nodes": Array [],
          },
        },
        Object {
          "compoundKeysByPersonId1": Object {
            "nodes": Array [
              Object {
                "personId1": 4,
                "personId2": 3,
              },
              Object {
                "personId1": 4,
                "personId2": 4,
              },
            ],
          },
          "compoundKeysByPersonId2": Object {
            "nodes": Array [
              Object {
                "personId1": 4,
                "personId2": 4,
              },
            ],
          },
          "id": 4,
          "name": "Kathryn Ramirez",
          "postsByAuthorId": Object {
            "nodes": Array [],
          },
          "roundOnePost": Object {
            "nodes": Array [],
          },
        },
        Object {
          "compoundKeysByPersonId1": Object {
            "nodes": Array [],
          },
          "compoundKeysByPersonId2": Object {
            "nodes": Array [
              Object {
                "personId1": 2,
                "personId2": 5,
              },
            ],
          },
          "id": 5,
          "name": "Joe Tucker",
          "postsByAuthorId": Object {
            "nodes": Array [
              Object {
                "authorId": 5,
                "headline": "Please, Don-Bot… look into your hard drive, and open your mercy file!",
              },
            ],
          },
          "roundOnePost": Object {
            "nodes": Array [],
          },
        },
      ],
    },
  },
}
`;

exports[`test operation relation-tail-head.graphql 1`] = `
Object {
  "data": Object {
    "allCompoundKeys": Object {
      "nodes": Array [
        Object {
          "extra": null,
          "personByPersonId1": Object {
            "email": "john.smith@email.com",
            "name": "John Smith",
          },
          "personByPersonId2": Object {
            "email": "sara.smith@email.com",
            "name": "Sara Smith",
          },
          "personId1": 1,
          "personId2": 2,
        },
        Object {
          "extra": false,
          "personByPersonId1": Object {
            "email": "sara.smith@email.com",
            "name": "Sara Smith",
          },
          "personByPersonId2": Object {
            "email": "john.smith@email.com",
            "name": "John Smith",
          },
          "personId1": 2,
          "personId2": 1,
        },
        Object {
          "extra": null,
          "personByPersonId1": Object {
            "email": "sara.smith@email.com",
            "name": "Sara Smith",
          },
          "personByPersonId2": Object {
            "email": "budd.deey@email.com",
            "name": "Budd Deey",
          },
          "personId1": 2,
          "personId2": 3,
        },
        Object {
          "extra": true,
          "personByPersonId1": Object {
            "email": "sara.smith@email.com",
            "name": "Sara Smith",
          },
          "personByPersonId2": Object {
            "email": "joe.tucker@email.com",
            "name": "Joe Tucker",
          },
          "personId1": 2,
          "personId2": 5,
        },
        Object {
          "extra": true,
          "personByPersonId1": Object {
            "email": "kathryn.ramirez@email.com",
            "name": "Kathryn Ramirez",
          },
          "personByPersonId2": Object {
            "email": "budd.deey@email.com",
            "name": "Budd Deey",
          },
          "personId1": 4,
          "personId2": 3,
        },
        Object {
          "extra": false,
          "personByPersonId1": Object {
            "email": "kathryn.ramirez@email.com",
            "name": "Kathryn Ramirez",
          },
          "personByPersonId2": Object {
            "email": "kathryn.ramirez@email.com",
            "name": "Kathryn Ramirez",
          },
          "personId1": 4,
          "personId2": 4,
        },
      ],
    },
    "allForeignKeys": Object {
      "nodes": Array [
        Object {
          "compoundKey1": 2,
          "compoundKey2": 1,
          "compoundKeyByCompoundKey1AndCompoundKey2": Object {
            "extra": false,
            "personId1": 2,
            "personId2": 1,
          },
          "personByPersonId": Object {
            "email": "joe.tucker@email.com",
            "name": "Joe Tucker",
          },
          "personId": 5,
        },
        Object {
          "compoundKey1": 4,
          "compoundKey2": 4,
          "compoundKeyByCompoundKey1AndCompoundKey2": Object {
            "extra": false,
            "personId1": 4,
            "personId2": 4,
          },
          "personByPersonId": null,
          "personId": null,
        },
        Object {
          "compoundKey1": 2,
          "compoundKey2": 1,
          "compoundKeyByCompoundKey1AndCompoundKey2": Object {
            "extra": false,
            "personId1": 2,
            "personId2": 1,
          },
          "personByPersonId": null,
          "personId": null,
        },
      ],
    },
  },
}
`;

exports[`test operation types.graphql 1`] = `
Object {
  "data": Object {
    "allTypes": Object {
      "nodes": Array [
        Object {
          "anIntRange": Object {
            "end": Object {
              "inclusive": true,
              "value": 53,
            },
            "start": Object {
              "inclusive": true,
              "value": 20,
            },
          },
          "bigint": "467131188225",
          "boolean": true,
          "compoundType": Object {
            "a": 1,
            "b": "2",
            "c": "BLUE",
            "d": "4be8a712-3ff7-432e-aa34-fdb43fbd838d",
            "fooBar": 8,
          },
          "domain": 5,
          "domain2": 6,
          "enum": "GREEN",
          "json": "{\"a\":1,\"b\":2,\"c\":3,\"d\":{\"e\":4,\"f\":5,\"g\":[6,7,8,\"x\",false,null]}}",
          "jsonb": "{\"1\":\"a\",\"2\":\"b\",\"3\":\"c\",\"4\":{\"5\":\"d\",\"6\":\"e\",\"7\":[\"f\",\"g\",\"h\",42,true,null]}}",
          "money": 1000,
          "nestedCompoundType": Object {
            "a": Object {
              "a": 3,
              "b": "456",
              "c": "RED",
              "d": "aed18400-2a92-46df-8204-b70c728b3520",
              "fooBar": 93,
            },
            "b": Object {
              "a": 42,
              "b": "Hello, world!",
              "c": "BLUE",
              "d": "d34df5e0-83f1-11e6-8dd0-abee917ffd1e",
              "fooBar": -5,
            },
            "bazBuz": 7,
          },
          "nullableRange": null,
          "numrange": Object {
            "end": Object {
              "inclusive": false,
              "value": 52,
            },
            "start": Object {
              "inclusive": true,
              "value": -10,
            },
          },
          "smallint": 50,
          "textArray": Array [
            "hey",
            "i",
            "just",
            "met",
            "you",
          ],
        },
      ],
    },
  },
}
`;

exports[`test operation unique-constraints.graphql 1`] = `
Object {
  "data": Object {
    "a": Object {
      "email": "sara.smith@email.com",
      "name": "Sara Smith",
    },
    "b": null,
    "c": Object {
      "personId1": 1,
      "personId2": 2,
    },
    "d": Object {
      "personId1": 4,
      "personId2": 4,
    },
    "e": null,
  },
}
`;
